<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/twInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/double_tap"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/generate_circles"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/long_press"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/open_settings"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/swipe_hor"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/remove_all"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/swipe_vert"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/change_mode"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>